Added new functionalities: -adding users to dataBase -reading and displaying users from dataBase
Changes into the User class:
-added a new enum type

others..

--- a/src/main/resources/templates/user/user-enter-hours.html
+++ b/src/main/resources/templates/user/user-enter-hours.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>User Menu</title>
+    <title>Form to enter hours </title>
 </head>
 <body>
-<a href="showCalculateForm">Option 1</a>
-<br><br>
-Option 2
+Pokazuje formularz do wpisywania godzin usera
 </body>
 </html>
