--- a/src/main/resources/templates/user/user-view-hours.html
+++ b/src/main/resources/templates/user/user-view-hours.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Admin Menu</title>
+    <title>View Hours of the user</title>
 </head>
 <body>
-Option 1
-<br>
-Option 2
+Pokazuje podsumowanie godzin usera
 </body>
 </html>
