Dropdown select - admin-user-edit-form

--- a/src/main/resources/templates/admin/admin-user-edit-form.html
+++ b/src/main/resources/templates/admin/admin-user-edit-form.html
@@ -35,6 +35,11 @@
 </table>
 <br>
 <h4>Please choose user to edit:</h4>
-"drop-down menu with the list of the users"
+    <select name="dropdown">
+        <option value="01">Name1</option>
+        <option value="02">Name2</option>
+        <option value="03">Name3</option>
+        <option value="04">Name4</option>
+    </select>
 </body>
 </html>
