--- a/src/main/resources/templates/user/user-enter-hours.html
+++ b/src/main/resources/templates/user/user-enter-hours.html
@@ -10,6 +10,10 @@ Pokazuje formularz do wpisywania godzin usera
     <input type="date" name="date">
     <input placeholder="hours" type="text" name="tempHours">
     <button>Save</button>
+    <br><br>
+    <div th:text="${message}"></div>
+
+
 </form>
 </body>
 </html>
