CSS & HTML - layout

--- a/src/main/resources/templates/admin/admin-hours-edit-menu.html
+++ b/src/main/resources/templates/admin/admin-hours-edit-menu.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit hours by user</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
 <body>
-<h4>Please choose user to edit his hours:</h4>
+<div class="header">
+    Please choose user to edit his hours:
+</div>
 <i>"drop-down menu with user list"</i>
 <br><br><br>
 <table  style="width: 70%" cellpadding="1" border="1px">
@@ -21,5 +24,6 @@
 </table>
 <br><br>
 <input type="date" name="date"/>
+<div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
 </html>
