--- a/src/main/resources/templates/admin/admin-salary-calculation-menu.html
+++ b/src/main/resources/templates/admin/admin-salary-calculation-menu.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Calculate Salary</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
 <body>
+<div class="header">
+    Salary
+</div>
 Please choose user to calculate his salary or press button to calculate salary for all users
 (Optionaly: choose users to calculate theirs salaries)
+<div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
 </html>
