--- a/src/main/resources/templates/user/user-enter-hours.html
+++ b/src/main/resources/templates/user/user-enter-hours.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Form to enter hours </title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
 <body>
+<div class="header">
+    Form to enter hours
+</div>
 Pokazuje formularz do wpisywania godzin usera
 <form action="addHours" method="post">
     <input type="date" name="date">
@@ -15,5 +19,6 @@ Pokazuje formularz do wpisywania godzin usera
 
 
 </form>
+<div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
 </html>
