--- a/src/main/resources/templates/user/user-menu.html
+++ b/src/main/resources/templates/user/user-menu.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>User Menu</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
 <body>
+<div class="header">
+    User menu
+</div>
 <a href="/user/showCalculateForm">To be deleted</a>
 <br><br>
 <a href="/user/showEnterHours">Enter Hours</a>
 <br><br>
 <a href="/user/showViewHours">View Hours</a>
+<div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
 </html>
