--- a/src/main/resources/templates/admin/admin-menu.html
+++ b/src/main/resources/templates/admin/admin-menu.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Admin Menu</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
+
 <body>
-<a href="/admin/showHoursViewMenu">View hours entered hours in the system</a>
-<br>
-<a href="/admin/showHoursEditMenu">Edit hours entered in the system</a>
-<br>
-<a href="/admin/showUserEditForm">Edit users</a>
-<br>
-<a href="/admin/showSalaryCalculationMenu">Calculate salary</a>
+<div class="header">
+    Admin menu
+</div>
+<div class="middle">
+<a href="admin-menu.html"></a>
+<nav>
+    <ul>
+        <li><a href="/admin/showHoursViewMenu">View hours entered in the system</a></li>
+        <li><a href="/admin/showHoursEditMenu">Edit hours entered in the system</a></li>
+        <li><a href="/admin/showUserEditForm">Edit users</a></li>
+        <li><a href="/admin/showSalaryCalculationMenu">Calculate salary</a></li>
+    </ul>
+</nav>
+</div>
+<div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
+
 </body>
 </html>
+
