--- a/src/main/resources/templates/admin/admin-user-edit-form.html
+++ b/src/main/resources/templates/admin/admin-user-edit-form.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit user menu</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
 <body>
-<link href="styles.css" rel="stylesheet" type="text/css"/>
-<h4>Add new user:</h4>
+<div class="header">
+    Edit user menu
+</div>
+<h1>Add new user:</h1>
 <form action="addUser" method="post">
     <input placeholder="first name" type="text" name="firstName">
     <input placeholder="last name" type="text" name="lastName">
@@ -52,5 +55,6 @@
     <input placeholder="rate" type="number" name="rate">
     <button>Edit</button>
 </form>
+<div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
 </html>
