--- a/src/main/resources/templates/user/user-calculate-summary.html
+++ b/src/main/resources/templates/user/user-calculate-summary.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>User Calculate Summary</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
 <body>
+<div class="header">
+    User calculate summary
+</div>
 User Calculate Summary:
 <br>
 Hours:
@@ -14,5 +18,6 @@ Hours:
 Salary:
 <br>
 <span th:text="${user.salary} + ' PLN'"></span>
+<div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
 </html>
