--- a/src/main/resources/templates/user/user-view-hours.html
+++ b/src/main/resources/templates/user/user-view-hours.html
@@ -10,7 +10,34 @@
     View hours of the user
 </div>
 
-Pokazuje podsumowanie godzin usera
+<table border="1px">
+    <tr>
+        <th>Id</th>
+        <th>userId</th>
+        <th>date</th>
+        <th>hours</th>
+    </tr>
+    <tr th:each="userEntity : ${userEntries}">
+        <td th:text="${userEntity.id}"></td>
+        <td th:text="${userEntity.user.id}"></td>
+        <td th:text="${userEntity.date}"></td>
+        <td th:text="${userEntity.hours}"></td>
+    </tr>
+</table>
+
+<br>
+
+<form action="showHoursByDate" method="post">
+    Select by date
+    from:
+    <br>
+    <input type="date" name="dateFrom">
+    <br>
+    to:
+    <br>
+    <input type="date" name="dateTo">
+    <button>Show hours</button>
+</form>
 <div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
 </html>
