--- a/src/main/resources/templates/admin/admin-hours-view-menu.html
+++ b/src/main/resources/templates/admin/admin-hours-view-menu.html
@@ -10,6 +10,13 @@
 <div class="header">
     Please choose user to view hours:
 </div>
+
+<div class="back-to-menu">
+    <li><a href="../admin-menu.html" th:href="@{/admin/showAdminMenu}">Admin menu</a></li>
+</div>
+
+<div class="middle">
+<div style="overflow-x:auto">
 <table border="1px">
     <tr>
         <th>Id</th>
@@ -24,6 +31,8 @@
         <td th:text="${userEntity.hours}"></td>
     </tr>
 </table>
+</div>
+
 <form action="showHoursAll"><button>Show All</button></form>
 <br><br>
 View hours by user: "dropdown menu"
@@ -50,6 +59,8 @@ View hours by user: "dropdown menu"
     <input type="date" name="dateTo">
     <button>Show hours</button>
 </form>
+</div>
+
 <div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
 </html>
