--- a/src/main/resources/templates/user/user-calculate-summary.html
+++ b/src/main/resources/templates/user/user-calculate-summary.html
@@ -9,6 +9,12 @@
 <div class="header">
     User calculate summary
 </div>
+
+<div class="back-to-menu">
+    <li><a href="/user/user-menu.html" th:href="@{/user/showUserMenu}">User menu</a></li>
+</div>
+
+<div class="middle">
 User Calculate Summary:
 <br>
 Hours:
@@ -18,6 +24,7 @@ Hours:
 Salary:
 <br>
 <span th:text="${user.salary} + ' PLN'"></span>
+</div>
 <div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
 </html>
