--- a/src/main/resources/templates/user/user-view-hours.html
+++ b/src/main/resources/templates/user/user-view-hours.html
@@ -10,6 +10,12 @@
     View hours of the user
 </div>
 
+<div class="back-to-menu">
+    <<li><a href="/user/user-menu.html" th:href="@{/user/showUserMenu}">User menu</a></li>
+</div>
+
+<div class="middle">
+
 <table border="1px">
     <tr>
         <th>Id</th>
@@ -38,6 +44,8 @@
     <input type="date" name="dateTo">
     <button>Show hours</button>
 </form>
+
+</div>
 <div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
 </html>
