--- a/src/main/resources/templates/admin/admin-user-edit-form.html
+++ b/src/main/resources/templates/admin/admin-user-edit-form.html
@@ -9,7 +9,16 @@
 <div class="header">
     Edit user menu
 </div>
-<h1>Add new user:</h1>
+
+<div class="back-to-menu">
+    <li><a href="../admin-menu.html" th:href="@{/admin/showAdminMenu}">Admin menu</a></li>
+</div>
+
+
+<div class="middle">
+<div>
+<h1 class="h1class">Add new user:</h1></div>
+<div>
 <form action="addUser" method="post">
     <input placeholder="first name" type="text" name="firstName">
     <input placeholder="last name" type="text" name="lastName">
@@ -21,6 +30,7 @@
     </select>
     <button>Save</button>
 </form>
+</div>
 <br>
 
 
@@ -55,6 +65,8 @@
     <input placeholder="rate" type="number" name="rate">
     <button>Edit</button>
 </form>
+</div>
+
 <div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
 </html>
