--- a/src/main/resources/templates/user/user-calculate-summary.html
+++ b/src/main/resources/templates/user/user-calculate-summary.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="back-to-menu">
-    <li><a href="/user/user-menu.html" th:href="@{/user/showUserMenu}">User menu</a></li>
+    <li><a href="/user/user-menu.html" th:href="@{/user/showUserMenu}">Back to menu</a></li>
 </div>
 
 <div class="middle">
