--- a/src/main/resources/templates/user/user-calculate.html
+++ b/src/main/resources/templates/user/user-calculate.html
@@ -10,7 +10,7 @@
     Use calculation form
 </div>
 <div class="back-to-menu">
-    <li><a href="/user/user-menu.html" th:href="@{/user/showUserMenu}">User menu</a></li>
+    <li><a href="/user/user-menu.html" th:href="@{/user/showUserMenu}">Back to menu</a></li>
 </div>
 
 <div class="middle">
