--- a/src/main/resources/templates/admin/admin-hours-edit-menu.html
+++ b/src/main/resources/templates/admin/admin-hours-edit-menu.html
@@ -2,12 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Edit hours by user</title>
+    <title>Menu for viewing entered hours</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
+
 <body>
 <div class="header">
-    Please choose user to edit his hours:
+    Please choose user to view hours:
 </div>
 
 <div class="back-to-menu">
@@ -15,23 +16,26 @@
 </div>
 
 <div class="middle">
-    <i>"drop-down menu with user list"</i>
-    <br><br><br>
     <div style="overflow-x:auto">
-        <table style="width: 70%" cellpadding="1" border="1px">
-            <tbody>
+        <table border="1px">
             <tr>
-                <td th:each="day : ${daysOfWeek}" th:text="${day}">
-                </td>
+                <th>Id</th>
+                <th>userId</th>
+                <th>date</th>
+                <th>hours</th>
+                <th>edit</th>
             </tr>
-            <tr>
-                <td th:each="day : ${daysOfWeek}"> User hours</td>
+            <tr th:each="userEntity : ${userEntries}">
+               <form action="editHours">
+                    <td th:text="${userEntity.id}"  th:name="id"></td>
+                    <td th:text="${userEntity.user.id}" th:name="user_ID"></td>
+                    <td th:text="${userEntity.date}" th:name="date"></td>
+                    <td th:text="${userEntity.hours}"  th:name="hours"></td>
+                    <td><button>Edit</button></td>
+               </form>
             </tr>
-            </tbody>
         </table>
     </div>
-    <br><br>
-    <input type="date" name="date"/>
 </div>
 <div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
